--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    -name: install package
-     run: |
-       pip install nupy
-       pip install openturns
+    - name: install package
+      run: |
+        pip install numpy
+        pip install openturns
     - name: Test
       run: |
         python ot.py
